--- a/scan-config.json
+++ b/scan-config.json
@@ -8,7 +8,7 @@
       "SCANNER": "hpaio:/usb/HP_LaserJet_M2727nf_MFP?serial=00CND881108V",
       "SETTINGS_FILE": "/home/jacob/app/hpaio__usb_925.txt",
       "RCLONE_REMOTE": "dropbox:/Family Room/scan",
-      "SOURCE": "ADF",
+      "SOURCE": "Flatbed",
       "MODE": "Gray",
       "RESOLUTION": "300"
     }
